# IMAP_Parser

./: README.md  doxygen_config
ImapParser/: CMakeLists.txt  main.cpp
ImapParser/include/: ImapParser.cpp  ImapParser.h  Message.h  MessageHeader.h  MessageWorker.h  Token.h  TokenWorker.cpp  TokenWorker.h
ImapParser/pcapFiles/: imap1.pcap  imap2.pcap  imap3.pcap  imap4.pcap  imap5.pcap
ImapParser/styles/: style1.css  style2.css
